--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,6 @@ S3method(print,ast)
 export(ast_decompose)
 export(ast_modify)
 export(ast_recompose)
+importFrom(rlang,as_name)
+importFrom(rlang,call_args)
 importFrom(utils,getParseData)
